:sparkles: Update index

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <!-- <header>
         <img src="assets/img/branding/logoSmall.svg" alt="LaCorbeille STUDIO">
         <div id="menu">
-            <a>Games</a>
-            <a>News</a>
-            <a>Support</a>
-            <a>Se connecter</a>
+            <a href="#">Games</a>
+            <a href="#">News</a>
+            <a href="#">Support</a>
+            <a href="#">Se connecter</a>
         </div>
     </header> -->
     <main>
@@ -38,11 +38,11 @@
     <!-- <footer>
         <div>
             <div>
-                <img src="assets/img/social/LinkedIn.svg" alt="LinkedIn">
-                <img src="assets/img/social/Instagram.svg" alt="Instagram">
-                <img src="assets/img/social/X.svg" alt="X">
-                <img src="assets/img/social/Facebook.svg" alt="Facebook">
-                <img src="assets/img/social/Discord.svg" alt="Discord">
+                <a href="#"><img src="assets/img/social/LinkedIn.svg" alt="LinkedIn"></a>
+                <a href="#"><img src="assets/img/social/Instagram.svg" alt="Instagram"></a>
+                <a href="#"><img src="assets/img/social/X.svg" alt="X"></a>
+                <a href="#"><img src="assets/img/social/Facebook.svg" alt="Facebook"></a>
+                <a href="#"><img src="assets/img/social/Discord.svg" alt="Discord"></a>
             </div>
             <img src="assets/img/branding/logoFullWhite.svg" alt="LaCorbeille STUDIO">
             <a>© LaCorbeille STUDIO 2024</a>
@@ -55,8 +55,8 @@
                 <a>Sitemap</a>
             </div>
             <select id="langSelect">
-                <option value="fr"></option>
-                <option value="en">English</option>
+                <option value="fr"><img src="assets/img/flags/fr.svg" alt="fr"></option>
+                <option value="en"><img src="assets/img/flags/en.svg" alt="en"></option>
             </select>
         </div>
     </footer> -->
