:art: Update layout and styling for header, sections, and footer; enhance button padding and add background for game cards

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         <section>
             <h1>Découvrir plus de jeux</h1>
             <div>
+                <div id="whiteBackground"></div>
                 <div class="game-card">
                     <img src="https://placehold.co/300x450?text=Game" alt="Placeholder">
                     <div class="platforms">
