--- a/index.html
+++ b/index.html
@@ -79,9 +79,10 @@
                 <div class="slide">
                     <div>
                         <h2>Rice Battle</h2>
-                        <p>Le LAB est un FPS dynamique qui met l'accent sur des affrontements rapides entre amis dans
-                            des arènes personnalisables. Avec des mécaniques de déplacement avancées, Le LAB encourage
-                            des stratégies basées sur la mobilité et des réflexes instantanés.</p>
+                        <p>RiceBattle est un jeu de combat en 2.5D pour deux joueurs, où les environnements sont
+                            modélisés en 3D tandis que les personnages et les éléments d’interaction sont en 2D. Le jeu
+                            se déroule dans un univers inspiré par la cuisine asiatique dans lequel les personnages
+                            peuvent interagir avec l’environnement.</p>
                         <button>En savoir plus</button>
                     </div>
                     <img src="assets/img/games/RiceBattle/RiceBattle - Banner.jpg" alt="RiceBattle">
@@ -89,9 +90,10 @@
                 <div class="slide">
                     <div>
                         <h2>A Little Adventure</h2>
-                        <p>Le LAB est un FPS dynamique qui met l'accent sur des affrontements rapides entre amis dans
-                            des arènes personnalisables. Avec des mécaniques de déplacement avancées, Le LAB encourage
-                            des stratégies basées sur la mobilité et des réflexes instantanés.</p>
+                        <p>A Little Adventure est un jeu de plateforme en 3D où le joueur explore un monde coloré rempli
+                            de défis en tout genre. Il sera amené à se battre contre des monstres, résoudre de petites
+                            énigmes et s’aventurer dans des niveaux de plus en plus difficiles. Son objectif est simple,
+                            compléter tous les niveaux et trouver les jetons cachés dans chacun d’entre eux.</p>
                         <button>En savoir plus</button>
                     </div>
                     <img src="assets/img/games/ALittleAdventure/ALittleAdventure - Banner.jpg" alt="A Little Adventure">
@@ -136,7 +138,46 @@
         </section>
         <section>
             <h1>Dernières actus</h1>
-
+            <div>
+                <div id="main-news-card">
+                    <img src="assets/img/news/MainNews.jpg" alt="LaCorbeille STUDIO - Main News">
+                    <h2>Inauguration du studio !</h2>
+                    <p>C’est avec une fierté empreinte de passion que nous annonçons la naissance officielle de
+                        LaCorbeille STUDIO !</p>
+                </div>
+                <div id="news">
+                    <div class="news-card">
+                        <div>
+                            <h2>News Title</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt
+                                ut
+                                labore
+                                et dolore magna aliqua.</p>
+                        </div>
+                        <img src="https://placehold.co/300x450?text=News%20Title" alt="Placeholder">
+                    </div>
+                    <div class="news-card">
+                        <div>
+                            <h2>News Title</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt
+                                ut
+                                labore
+                                et dolore magna aliqua.</p>
+                        </div>
+                        <img src="https://placehold.co/300x450?text=News%20Title" alt="Placeholder">
+                    </div>
+                    <div class="news-card">
+                        <div>
+                            <h2>News Title</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt
+                                ut
+                                labore
+                                et dolore magna aliqua.</p>
+                        </div>
+                        <img src="https://placehold.co/300x450?text=News%20Title" alt="Placeholder">
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
