:art: Refactor CSS for improved layout and responsiveness; update padding, margins, and media queries

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         "name": "LaCorbeille STUDIO",
         "url": "https://lacorbeille.studio",
         "logo": "https://lacorbeille.studio/assets/img/branding/LogoFull.svg",
-        "description": "Créateur de jeux vidéo innovants."
+        "description": "Créateur de jeux vidéo."
     }
     </script>
     <!-- OpenGraph -->
