:bento: Update slideshow assets

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             des stratégies basées sur la mobilité et des réflexes instantanés.</p>
                         <button>En savoir plus</button>
                     </div>
-                    <img src="assets/img/games/LeLAB/LeLAB - Banner.jpg" alt="Le LAB">
+                    <img src="assets/img/games/LeLAB/LeLAB - SmallBanner.jpg" alt="Le LAB">
                 </div>
                 <div class="slide">
                     <div>
@@ -85,7 +85,7 @@
                             peuvent interagir avec l’environnement.</p>
                         <button>En savoir plus</button>
                     </div>
-                    <img src="assets/img/games/RiceBattle/RiceBattle - Banner.jpg" alt="RiceBattle">
+                    <img src="assets/img/games/RiceBattle/RiceBattle - SmallBanner.jpg" alt="RiceBattle">
                 </div>
                 <div class="slide">
                     <div>
@@ -96,7 +96,7 @@
                             compléter tous les niveaux et trouver les jetons cachés dans chacun d’entre eux.</p>
                         <button>En savoir plus</button>
                     </div>
-                    <img src="assets/img/games/ALittleAdventure/ALittleAdventure - Banner.jpg" alt="A Little Adventure">
+                    <img src="assets/img/games/ALittleAdventure/ALittleAdventure - SmallBanner.jpg" alt="A Little Adventure">
                 </div>
             </div>
             <div class="dots"></div>
