:art: Adjust header and footer styles for improved layout; update padding, image sizes, and add link section :sparkles: Enhance responsiveness of footer elements for better mobile display :sparkles: Update slideshow interval timing for smoother transitions

--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
                             compléter tous les niveaux et trouver les jetons cachés dans chacun d’entre eux.</p>
                         <button>En savoir plus</button>
                     </div>
-                    <img src="assets/img/games/ALittleAdventure/ALittleAdventure - SmallBanner.jpg" alt="A Little Adventure">
+                    <img src="assets/img/games/ALittleAdventure/ALittleAdventure - SmallBanner.jpg"
+                        alt="A Little Adventure">
                 </div>
             </div>
             <div class="dots"></div>
@@ -178,6 +179,7 @@
                     </div>
                 </div>
             </div>
+            <button onclick="window.open('https://instagram.com/lacorbeille.studio', '_blank')">Voir nos derniers posts</button>
         </section>
     </main>
     <footer>
@@ -187,6 +189,11 @@
                 <a href="mailto:contact@lacorbeille.studio">contact@lacorbeille.studio</a>
                 <a>© 2025 LaCorbeille STUDIO. Tous droits réservés.</a>
             </div>
+        </div>
+        <div id="links">
+            <a href="#">Sitemap</a>
+            <a href="#">Legal notice</a>
+            <a href="#">Press kit</a>
         </div>
         <div id="socials">
             <a href="" target="_blank"><img src="assets/img/social/ItchIO.svg" alt="Itch.io"></a>
