--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     <link rel="stylesheet" href="css/responsive/index.css">
     <!-- JS -->
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
-    <script src="js/slideshow.js" defer></script>
     <script src="js/dynamicTitle.js" defer></script>
+    <script src="js/slideshow.js" defer></script>
+    <script src="js/gamecards.js" defer></script>
     <script src="js/rightClick.js" defer></script>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -54,12 +55,13 @@
 
 <body>
     <header>
+        <h1 style="display:none">LaCorbeille STUDIO</h1>
         <img src="assets/img/branding/LogoFullWhite.svg" alt="LaCorbeille STUDIO - LogoFull" class="logo">
         <nav>
             <ul>
-                <li><a href="#">Jeux</a></li>
-                <li><a href="#">Actus</a></li>
-                <li><a href="#">Support</a></li>
+                <li><a href="#games-section">Jeux</a></li>
+                <li><a href="#news-section">Actus</a></li>
+                <li><a href="mailto:contact@lacorbeille.studio?subject=Demande%20de%20support">Support</a></li>
             </ul>
         </nav>
     </header>
@@ -102,7 +104,7 @@
             </div>
             <div class="dots"></div>
         </section>
-        <section>
+        <section id="games-section">
             <h1>Découvrir plus de jeux</h1>
             <div>
                 <div id="whiteBackground"></div>
@@ -134,10 +136,31 @@
                         <img src="assets/img/platforms/Linux.svg" alt="Linux">
                     </div>
                 </div>
+                <div class="game-card">
+                    <img src="https://placehold.co/300x450?text=Game" alt="Placeholder">
+                    <div class="platforms">
+                        <img src="assets/img/platforms/Windows.svg" alt="Windows">
+                        <img src="assets/img/platforms/Linux.svg" alt="Linux">
+                    </div>
+                </div>
+                <div class="game-card">
+                    <img src="https://placehold.co/300x450?text=Game" alt="Placeholder">
+                    <div class="platforms">
+                        <img src="assets/img/platforms/Windows.svg" alt="Windows">
+                        <img src="assets/img/platforms/Linux.svg" alt="Linux">
+                    </div>
+                </div>
+                <div class="game-card">
+                    <img src="https://placehold.co/300x450?text=Game" alt="Placeholder">
+                    <div class="platforms">
+                        <img src="assets/img/platforms/Windows.svg" alt="Windows">
+                        <img src="assets/img/platforms/Linux.svg" alt="Linux">
+                    </div>
+                </div>
             </div>
-            <button>Voir tous les jeux</button>
+            <button onclick="hideMoreGames()">Réduire les jeux</button>
         </section>
-        <section>
+        <section id="news-section">
             <h1>Dernières actus</h1>
             <div>
                 <div id="main-news-card">
@@ -149,33 +172,24 @@
                 <div id="news">
                     <div class="news-card">
                         <div>
-                            <h2>News Title</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt
-                                ut
-                                labore
-                                et dolore magna aliqua.</p>
+                            <h2>LaCorbeille STUDIO</h2>
+                            <p>Suivez-nous sur nos différents réseaux !</p>
                         </div>
-                        <img src="https://placehold.co/300x450?text=News%20Title" alt="Placeholder">
+                        <img src="assets/img/branding/LogoSmallBlurPadding.jpg" alt="Logo Small">
                     </div>
                     <div class="news-card">
                         <div>
-                            <h2>News Title</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt
-                                ut
-                                labore
-                                et dolore magna aliqua.</p>
+                            <h2>Découvrez Le LAB</h2>
+                            <p>Découvrez notre nouveau projet Le LAB.</p>
                         </div>
-                        <img src="https://placehold.co/300x450?text=News%20Title" alt="Placeholder">
+                        <img src="assets/img/games/LeLAB/LeLAB - Icon.jpg" alt="Le LAB">
                     </div>
                     <div class="news-card">
                         <div>
-                            <h2>News Title</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt
-                                ut
-                                labore
-                                et dolore magna aliqua.</p>
+                            <h2>Rice Battle</h2>
+                            <p>Un jeu de combat en 2.5D pour deux joueurs dans un univers inspiré par la cuisine asiatique.</p>
                         </div>
-                        <img src="https://placehold.co/300x450?text=News%20Title" alt="Placeholder">
+                        <img src="assets/img/games/RiceBattle/RiceBattle - Icon.png" alt="Rice Battle">
                     </div>
                 </div>
             </div>
@@ -191,17 +205,17 @@
             </div>
         </div>
         <div id="links">
-            <a href="#">Sitemap</a>
-            <a href="#">Legal notice</a>
-            <a href="#">Press kit</a>
+            <a href="sitemap.xml" target="_blank">Sitemap</a>
+            <a href="legal.html">Legal notice</a>
+            <a href="https://drive.google.com/file/d/19BLUa7sSfQHJMSVENMNamBFYqbqVPh_s/view?usp=sharing" target="_blank">Press kit</a>
         </div>
         <div id="socials">
-            <a href="" target="_blank"><img src="assets/img/social/ItchIO.svg" alt="Itch.io"></a>
-            <a href="" target="_blank"><img src="assets/img/social/Discord.svg" alt="Discord"></a>
-            <a href="" target="_blank"><img src="assets/img/social/Facebook.svg" alt="Facebook"></a>
-            <a href="" target="_blank"><img src="assets/img/social/LinkedIn.svg" alt="LinkedIn"></a>
-            <a href="" target="_blank"><img src="assets/img/social/X.svg" alt="X"></a>
-            <a href="" target="_blank"><img src="assets/img/social/Instagram.svg" alt="Instagram"></a>
+            <a href="https://lacorbeille-studio.itch.io" target="_blank"><img src="assets/img/social/ItchIO.svg" alt="Itch.io"></a>
+            <a href="https://discord.com/invite/hmPzS4k" target="_blank"><img src="assets/img/social/Discord.svg" alt="Discord"></a>
+            <a href="https://www.facebook.com/people/LaCorbeille-Studio/61565357266191/" target="_blank"><img src="assets/img/social/Facebook.svg" alt="Facebook"></a>
+            <a href="https://www.linkedin.com/company/lacorbeille-studio" target="_blank"><img src="assets/img/social/LinkedIn.svg" alt="LinkedIn"></a>
+            <a href="https://x.com/LaCorbeilleSTD" target="_blank"><img src="assets/img/social/X.svg" alt="X"></a>
+            <a href="https://www.instagram.com/lacorbeille.studio" target="_blank"><img src="assets/img/social/Instagram.svg" alt="Instagram"></a>
         </div>
     </footer>
 </body>
