--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 <body>
     <header>
         <h1 style="display:none">LaCorbeille STUDIO</h1>
-        <img src="assets/img/branding/LogoFullWhite.svg" alt="LaCorbeille STUDIO - LogoFull" class="logo">
+        <img src="assets/img/branding/LogoFullWhite.svg" alt="LaCorbeille STUDIO - LogoFull" id="logoFull">
+        <img src="assets/img/branding/LogoSmallWhite.svg" alt="LaCorbeille STUDIO - LogoSmall" id="logoSmall">
         <nav>
             <ul>
                 <li><a href="#games-section">Jeux</a></li>
@@ -158,7 +159,7 @@
                     </div>
                 </div>
             </div>
-            <button onclick="hideMoreGames()">Réduire les jeux</button>
+            <button onclick="hideMoreGames(true)">Réduire les jeux</button>
         </section>
         <section id="news-section">
             <h1>Dernières actus</h1>
