:bug: Fix button alignment and responsiveness in sections 2 and 3; enhance news card styling for better display

--- a/index.html
+++ b/index.html
@@ -188,13 +188,15 @@
                     <div class="news-card">
                         <div>
                             <h2>Rice Battle</h2>
-                            <p>Un jeu de combat en 2.5D pour deux joueurs dans un univers inspiré par la cuisine asiatique.</p>
+                            <p>Un jeu de combat en 2.5D pour deux joueurs dans un univers inspiré par la cuisine
+                                asiatique.</p>
                         </div>
                         <img src="assets/img/games/RiceBattle/RiceBattle - Icon.png" alt="Rice Battle">
                     </div>
                 </div>
             </div>
-            <button onclick="window.open('https://instagram.com/lacorbeille.studio', '_blank')">Voir nos derniers posts</button>
+            <button onclick="window.open('https://instagram.com/lacorbeille.studio', '_blank')">Voir nos derniers
+                posts</button>
         </section>
     </main>
     <footer>
@@ -208,15 +210,21 @@
         <div id="links">
             <a href="sitemap.xml" target="_blank">Sitemap</a>
             <a href="legal.html">Legal notice</a>
-            <a href="https://drive.google.com/file/d/19BLUa7sSfQHJMSVENMNamBFYqbqVPh_s/view?usp=sharing" target="_blank">Press kit</a>
+            <a href="https://drive.google.com/file/d/19BLUa7sSfQHJMSVENMNamBFYqbqVPh_s/view?usp=sharing"
+                target="_blank">Press kit</a>
         </div>
         <div id="socials">
-            <a href="https://lacorbeille-studio.itch.io" target="_blank"><img src="assets/img/social/ItchIO.svg" alt="Itch.io"></a>
-            <a href="https://discord.com/invite/hmPzS4k" target="_blank"><img src="assets/img/social/Discord.svg" alt="Discord"></a>
-            <a href="https://www.facebook.com/people/LaCorbeille-Studio/61565357266191/" target="_blank"><img src="assets/img/social/Facebook.svg" alt="Facebook"></a>
-            <a href="https://www.linkedin.com/company/lacorbeille-studio" target="_blank"><img src="assets/img/social/LinkedIn.svg" alt="LinkedIn"></a>
+            <a href="https://lacorbeille-studio.itch.io" target="_blank"><img src="assets/img/social/ItchIO.svg"
+                    alt="Itch.io"></a>
+            <a href="https://discord.com/invite/hmPzS4k" target="_blank"><img src="assets/img/social/Discord.svg"
+                    alt="Discord"></a>
+            <a href="https://www.facebook.com/people/LaCorbeille-Studio/61565357266191/" target="_blank"><img
+                    src="assets/img/social/Facebook.svg" alt="Facebook"></a>
+            <a href="https://www.linkedin.com/company/lacorbeille-studio" target="_blank"><img
+                    src="assets/img/social/LinkedIn.svg" alt="LinkedIn"></a>
             <a href="https://x.com/LaCorbeilleSTD" target="_blank"><img src="assets/img/social/X.svg" alt="X"></a>
-            <a href="https://www.instagram.com/lacorbeille.studio" target="_blank"><img src="assets/img/social/Instagram.svg" alt="Instagram"></a>
+            <a href="https://www.instagram.com/lacorbeille.studio" target="_blank"><img
+                    src="assets/img/social/Instagram.svg" alt="Instagram"></a>
         </div>
     </footer>
 </body>
