--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="stylesheet" href="css/responsive/stylesheet.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/responsive/header.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/responsive/footer.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/responsive/index.css">
     <!-- JS -->
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
     <script src="js/dynamicTitle.js" defer></script>
     <script src="js/slideshow.js" defer></script>
     <script src="js/gamecards.js" defer></script>
@@ -109,28 +112,28 @@
             <h1>Découvrir plus de jeux</h1>
             <div>
                 <div id="whiteBackground"></div>
-                <div class="game-card">
+                <div class="game-card" onclick="window.location.href='games/Le LAB.html'">
                     <img src="assets/img/games/LeLAB/LeLAB - Cover.jpg" alt="Placeholder">
                     <div class="platforms">
                         <img src="assets/img/platforms/Windows.svg" alt="Windows">
                         <img src="assets/img/platforms/Linux.svg" alt="Linux">
                     </div>
                 </div>
-                <div class="game-card">
+                <div class="game-card" onclick="window.location.href='games/Rice Battle.html'">
                     <img src="assets/img/games/RiceBattle/RiceBattle - Cover.jpg" alt="Placeholder">
                     <div class="platforms">
                         <img src="assets/img/platforms/Windows.svg" alt="Windows">
                         <img src="assets/img/platforms/Linux.svg" alt="Linux">
                     </div>
                 </div>
-                <div class="game-card">
+                <div class="game-card" onclick="window.location.href='games/A Little Adventure.html'">
                     <img src="assets/img/games/ALittleAdventure/ALittleAdventure - Cover.jpg" alt="Placeholder">
                     <div class="platforms">
                         <img src="assets/img/platforms/Windows.svg" alt="Windows">
                         <img src="assets/img/platforms/Linux.svg" alt="Linux">
                     </div>
                 </div>
-                <div class="game-card">
+                <div class="game-card" onclick="window.location.href='games/BOT A.N.I.C.html'">
                     <img src="https://placehold.co/300x450?text=BOT%20A.N.I.C" alt="Placeholder">
                     <div class="platforms">
                         <img src="assets/img/platforms/Windows.svg" alt="Windows">
@@ -168,7 +171,7 @@
                     <img src="assets/img/news/MainNews.jpg" alt="LaCorbeille STUDIO - Main News">
                     <h2>Inauguration du studio !</h2>
                     <p>C’est avec une fierté empreinte de passion que nous annonçons la naissance officielle de
-                        LaCorbeille STUDIO !</p>
+                        <br>LaCorbeille STUDIO !</p>
                 </div>
                 <div id="news">
                     <div class="news-card">
@@ -178,14 +181,14 @@
                         </div>
                         <img src="assets/img/branding/LogoSmallBlurPadding.jpg" alt="Logo Small">
                     </div>
-                    <div class="news-card">
+                    <div class="news-card clickable" onclick="window.location.href='games/Le LAB.html'">
                         <div>
                             <h2>Découvrez Le LAB</h2>
                             <p>Découvrez notre nouveau projet Le LAB.</p>
                         </div>
                         <img src="assets/img/games/LeLAB/LeLAB - Icon.jpg" alt="Le LAB">
                     </div>
-                    <div class="news-card">
+                    <div class="news-card clickable" onclick="window.location.href='games/A Little Adventure.html'">
                         <div>
                             <h2>Rice Battle</h2>
                             <p>Un jeu de combat en 2.5D pour deux joueurs dans un univers inspiré par la cuisine
