--- a/games/Le LAB.html
+++ b/games/Le LAB.html
@@ -8,21 +8,21 @@
         content="LaCorbeille STUDIO, créateur de jeux vidéo indépendant. Découvrez nos projets en cours, nos jeux sortis, et les dernières actualités de notre studio." />
     <title>LaCorbeille STUDIO</title>
     <!--Favicon-->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/img/favicon/favicon-16x16.png">
     <!-- CSS -->
-    <link rel="stylesheet" href="css/stylesheet.css">
-    <link rel="stylesheet" href="css/responsive/stylesheet.css">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/responsive/header.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/responsive/footer.css">
+    <link rel="stylesheet" href="../css/stylesheet.css">
+    <link rel="stylesheet" href="../css/responsive/stylesheet.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/responsive/header.css">
+    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/responsive/footer.css">
     <!-- JS -->
-    <script src="js/dynamicTitle.js" defer></script>
-    <script src="js/slideshow.js" defer></script>
-    <script src="js/gamecards.js" defer></script>
-    <script src="js/rightClick.js" defer></script>
+    <script src="../js/dynamicTitle.js" defer></script>
+    <script src="../js/slideshow.js" defer></script>
+    <script src="../js/gamecards.js" defer></script>
+    <script src="../js/rightClick.js" defer></script>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -57,8 +57,8 @@
 <body>
     <header>
         <h1 style="display:none">LaCorbeille STUDIO</h1>
-        <img src="assets/img/branding/LogoFullWhite.svg" alt="LaCorbeille STUDIO - LogoFull" id="logoFull">
-        <img src="assets/img/branding/LogoSmallWhite.svg" alt="LaCorbeille STUDIO - LogoSmall" id="logoSmall">
+        <img src="../assets/img/branding/LogoFullWhite.svg" alt="LaCorbeille STUDIO - LogoFull" id="logoFull">
+        <img src="../assets/img/branding/LogoSmallWhite.svg" alt="LaCorbeille STUDIO - LogoSmall" id="logoSmall">
         <nav>
             <ul>
                 <li><a href="#games-section">Jeux</a></li>
@@ -72,30 +72,30 @@
     </main>
     <footer>
         <div id="branding">
-            <img src="assets/img/branding/LogoSmallWhite.svg" alt="LaCorbeille STUDIO - LogoSmall" class="logo">
+            <img src="../assets/img/branding/LogoSmallWhite.svg" alt="LaCorbeille STUDIO - LogoSmall" class="logo">
             <div id="contact">
                 <a href="mailto:contact@lacorbeille.studio">contact@lacorbeille.studio</a>
                 <a>© 2025 LaCorbeille STUDIO. Tous droits réservés.</a>
             </div>
         </div>
         <div id="links">
-            <a href="sitemap.xml" target="_blank">Sitemap</a>
-            <a href="legal.html">Legal notice</a>
+            <a href="../sitemap.xml" target="_blank">Sitemap</a>
+            <a href="../legal.html">Legal notice</a>
             <a href="https://drive.google.com/file/d/19BLUa7sSfQHJMSVENMNamBFYqbqVPh_s/view?usp=sharing"
                 target="_blank">Press kit</a>
         </div>
         <div id="socials">
-            <a href="https://lacorbeille-studio.itch.io" target="_blank"><img src="assets/img/social/ItchIO.svg"
+            <a href="https://lacorbeille-studio.itch.io" target="_blank"><img src="../assets/img/social/ItchIO.svg"
                     alt="Itch.io"></a>
-            <a href="https://discord.com/invite/hmPzS4k" target="_blank"><img src="assets/img/social/Discord.svg"
+            <a href="https://discord.com/invite/hmPzS4k" target="_blank"><img src="../assets/img/social/Discord.svg"
                     alt="Discord"></a>
             <a href="https://www.facebook.com/people/LaCorbeille-Studio/61565357266191/" target="_blank"><img
-                    src="assets/img/social/Facebook.svg" alt="Facebook"></a>
+                    src="../assets/img/social/Facebook.svg" alt="Facebook"></a>
             <a href="https://www.linkedin.com/company/lacorbeille-studio" target="_blank"><img
-                    src="assets/img/social/LinkedIn.svg" alt="LinkedIn"></a>
-            <a href="https://x.com/LaCorbeilleSTD" target="_blank"><img src="assets/img/social/X.svg" alt="X"></a>
+                    src="../assets/img/social/LinkedIn.svg" alt="LinkedIn"></a>
+            <a href="https://x.com/LaCorbeilleSTD" target="_blank"><img src="../assets/img/social/X.svg" alt="X"></a>
             <a href="https://www.instagram.com/lacorbeille.studio" target="_blank"><img
-                    src="assets/img/social/Instagram.svg" alt="Instagram"></a>
+                    src="../assets/img/social/Instagram.svg" alt="Instagram"></a>
         </div>
     </footer>
 </body>
