--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 <body>
     <header>
         <h1 style="display:none">LaCorbeille STUDIO</h1>
-        <img src="assets/img/branding/LogoFullWhite.svg" alt="LaCorbeille STUDIO - LogoFull" id="logoFull">
-        <img src="assets/img/branding/LogoSmallWhite.svg" alt="LaCorbeille STUDIO - LogoSmall" id="logoSmall">
+        <a href="index.html"><img src="assets/img/branding/LogoFullWhite.svg" alt="LaCorbeille STUDIO - LogoFull" id="logoFull"></a>
+        <a href="index.html"><img src="assets/img/branding/LogoSmallWhite.svg" alt="LaCorbeille STUDIO - LogoSmall" id="logoSmall"></a>
         <nav>
             <ul>
                 <li><a href="#games-section">Jeux</a></li>
@@ -174,7 +174,7 @@
                         <br>LaCorbeille STUDIO !</p>
                 </div>
                 <div id="news">
-                    <div class="news-card">
+                    <div class="news-card clickable" onclick="window.location.href='https://links.lacorbeille.studio'">
                         <div>
                             <h2>LaCorbeille STUDIO</h2>
                             <p>Suivez-nous sur nos différents réseaux !</p>
@@ -217,17 +217,12 @@
                 target="_blank">Press kit</a>
         </div>
         <div id="socials">
-            <a href="https://lacorbeille-studio.itch.io" target="_blank"><img src="assets/img/social/ItchIO.svg"
-                    alt="Itch.io"></a>
-            <a href="https://discord.com/invite/hmPzS4k" target="_blank"><img src="assets/img/social/Discord.svg"
-                    alt="Discord"></a>
-            <a href="https://www.facebook.com/people/LaCorbeille-Studio/61565357266191/" target="_blank"><img
-                    src="assets/img/social/Facebook.svg" alt="Facebook"></a>
-            <a href="https://www.linkedin.com/company/lacorbeille-studio" target="_blank"><img
-                    src="assets/img/social/LinkedIn.svg" alt="LinkedIn"></a>
+            <a href="https://lacorbeille-studio.itch.io" target="_blank"><img src="assets/img/social/ItchIO.svg" alt="Itch.io"></a>
+            <a href="https://discord.com/invite/hmPzS4k" target="_blank"><img src="assets/img/social/Discord.svg" alt="Discord"></a>
+            <a href="https://www.facebook.com/people/LaCorbeille-Studio/61565357266191/" target="_blank"><img src="assets/img/social/Facebook.svg" alt="Facebook"></a>
+            <a href="https://www.linkedin.com/company/lacorbeille-studio" target="_blank"><img src="assets/img/social/LinkedIn.svg" alt="LinkedIn"></a>
             <a href="https://x.com/LaCorbeilleSTD" target="_blank"><img src="assets/img/social/X.svg" alt="X"></a>
-            <a href="https://www.instagram.com/lacorbeille.studio" target="_blank"><img
-                    src="assets/img/social/Instagram.svg" alt="Instagram"></a>
+            <a href="https://www.instagram.com/lacorbeille.studio" target="_blank"><img src="assets/img/social/Instagram.svg" alt="Instagram"></a>
         </div>
     </footer>
 </body>
