--- a/links.lacorbeille.studio/index.html
+++ b/links.lacorbeille.studio/index.html
@@ -44,18 +44,15 @@
         <section>
             <h2>Liens</h2>
             <a href="https://www.lacorbeille.studio" target="_blank">LaCorbeille STUDIO</a>
-            <a href="https://www.lacorbeille.studio/games/Le%20LAB.html" target="_blank">Le LAB</a>
-            <a href="https://www.lacorbeille.studio/games/A%20Little%20Adventure.html" target="_blank">A Little Adventure</a>
-            <a href="https://www.lacorbeille.studio/games/Rice%20Battle.html" target="_blank">Rice Battle</a>
-            <a href="https://www.lacorbeille.studio/games/BOT%20A.N.I.C.html" target="_blank">BOT A.N.I.C</a>
         </section>
         <section>
             <h2>Comptes</h2>
-            <a href="https://instagram.com/noa.second" target="_blank"><img
-                    src="assets/icons/Instagram.svg">Instagram</a>
-            <a href="https://www.linkedin.com/in/noa-second" target="_blank"><img
-                    src="assets/icons/LinkedIn.svg">LinkedIn</a>
-            <a href="https://github.com/NoaSecond" target="_blank"><img src="assets/icons/GitHub.svg">GitHub</a>
+            <a href="https://instagram.com/lacorbeille.studio" target="_blank"><img src="assets/icons/Instagram.svg">Instagram</a>
+            <a href="https://www.linkedin.com/company/lacorbeille-studio" target="_blank"><img src="assets/icons/LinkedIn.svg">LinkedIn</a>
+            <a href="https://www.facebook.com/people/LaCorbeille-Studio/61565357266191/" target="_blank"><img src="assets/icons/Facebook.svg">Facebook</a>
+            <a href="https://x.com/LaCorbeilleSTD" target="_blank"><img src="assets/icons/X.svg">X</a>
+            <a href="https://discord.com/invite/hmPzS4k" target="_blank"><img src="assets/icons/Discord.svg">Discord</a>
+            <a href="https://lacorbeille-studio.itch.io" target="_blank"><img src="assets/icons/ItchIO.svg">Itch.io</a>
         </section>
     </main>
 </body>
