--- a/games/Le LAB.html
+++ b/games/Le LAB.html
@@ -57,8 +57,8 @@
 <body>
     <header>
         <h1 style="display:none">LaCorbeille STUDIO</h1>
-        <img src="../assets/img/branding/LogoFullWhite.svg" alt="LaCorbeille STUDIO - LogoFull" id="logoFull">
-        <img src="../assets/img/branding/LogoSmallWhite.svg" alt="LaCorbeille STUDIO - LogoSmall" id="logoSmall">
+        <a href="index.html"><img src="assets/img/branding/LogoFullWhite.svg" alt="LaCorbeille STUDIO - LogoFull" id="logoFull"></a>
+        <a href="index.html"><img src="assets/img/branding/LogoSmallWhite.svg" alt="LaCorbeille STUDIO - LogoSmall" id="logoSmall"></a>
         <nav>
             <ul>
                 <li><a href="#games-section">Jeux</a></li>
