:sparkles: Add pause and resume functionality to slideshow; include SVG icons

--- a/index.html
+++ b/index.html
@@ -106,7 +106,10 @@
                         alt="A Little Adventure">
                 </div>
             </div>
-            <div class="dots"></div>
+            <div class="dots">
+                <a id="pause" onclick="stopSlideShow()"><img src="assets/img/pause.svg"></a>
+                <a id="resume" onclick="startSlideShow()"><img src="assets/img/resume.svg"></a>
+            </div>
         </section>
         <section id="games-section">
             <h1>Découvrir plus de jeux</h1>
@@ -211,10 +214,9 @@
             </div>
         </div>
         <div id="links">
-            <a href="sitemap.xml" target="_blank">Sitemap</a>
+            <a href="sitemap.xml">Sitemap</a>
             <a href="legal.html">Legal notice</a>
-            <a href="https://drive.google.com/file/d/19BLUa7sSfQHJMSVENMNamBFYqbqVPh_s/view?usp=sharing"
-                target="_blank">Press kit</a>
+            <a href="https://drive.google.com/file/d/19BLUa7sSfQHJMSVENMNamBFYqbqVPh_s/view?usp=sharing" target="_blank">Press kit</a>
         </div>
         <div id="socials">
             <a href="https://lacorbeille-studio.itch.io" target="_blank"><img src="assets/img/social/ItchIO.svg" alt="Itch.io"></a>
