--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <p>Le LAB est un FPS dynamique qui met l'accent sur des affrontements rapides entre amis dans
                             des arènes personnalisables. Avec des mécaniques de déplacement avancées, Le LAB encourage
                             des stratégies basées sur la mobilité et des réflexes instantanés.</p>
-                        <button>En savoir plus</button>
+                        <button onclick="window.location.href='games/Le LAB.html'">En savoir plus</button>
                     </div>
                     <img src="assets/img/games/LeLAB/LeLAB - SmallBanner.jpg" alt="Le LAB">
                 </div>
@@ -89,7 +89,7 @@
                             modélisés en 3D tandis que les personnages et les éléments d’interaction sont en 2D. Le jeu
                             se déroule dans un univers inspiré par la cuisine asiatique dans lequel les personnages
                             peuvent interagir avec l’environnement.</p>
-                        <button>En savoir plus</button>
+                        <button onclick="window.location.href='games/Rice Battle.html'">En savoir plus</button>
                     </div>
                     <img src="assets/img/games/RiceBattle/RiceBattle - SmallBanner.jpg" alt="RiceBattle">
                 </div>
@@ -100,7 +100,7 @@
                             de défis en tout genre. Il sera amené à se battre contre des monstres, résoudre de petites
                             énigmes et s’aventurer dans des niveaux de plus en plus difficiles. Son objectif est simple,
                             compléter tous les niveaux et trouver les jetons cachés dans chacun d’entre eux.</p>
-                        <button>En savoir plus</button>
+                        <button onclick="window.location.href='games/A Little Adventure.html'">En savoir plus</button>
                     </div>
                     <img src="assets/img/games/ALittleAdventure/ALittleAdventure - SmallBanner.jpg"
                         alt="A Little Adventure">
