--- a/links.lacorbeille.studio/index.html
+++ b/links.lacorbeille.studio/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LaCorbeille STUDIO</title>
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="https://www.lacorbeille.studio/assets/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://www.lacorbeille.studio/assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://www.lacorbeille.studio/assets/favicon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <!-- CSS -->
     <link rel="stylesheet" href="css/stylesheet.css">
     <!-- JS -->
