--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 <body>
     <header>
         <h1 style="display:none">LaCorbeille STUDIO</h1>
-        <a href="index.html"><img src="assets/img/branding/LogoFullWhite.svg" alt="LaCorbeille STUDIO - LogoFull" id="logoFull"></a>
-        <a href="index.html"><img src="assets/img/branding/LogoSmallWhite.svg" alt="LaCorbeille STUDIO - LogoSmall" id="logoSmall"></a>
+        <a href="index.html" id="logoFull"><img src="assets/img/branding/LogoFullWhite.svg" alt="LaCorbeille STUDIO - LogoFull"></a>
+        <a href="index.html" id="logoSmall"><img src="assets/img/branding/LogoSmallWhite.svg" alt="LaCorbeille STUDIO - LogoSmall"></a>
         <nav>
             <ul>
                 <li><a href="#games-section">Jeux</a></li>
