:mag: Update game metadata and descriptions for improved SEO and clarity across multiple game pages

--- a/games/Rice Battle.html
+++ b/games/Rice Battle.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="LaCorbeille STUDIO, créateur de jeux vidéo indépendant. Découvrez nos projets en cours, nos jeux sortis, et les dernières actualités de notre studio." />
-    <title>LaCorbeille STUDIO</title>
+    <meta name="description" content="RiceBattle est un jeu de combat en 2.5D pour deux joueurs, où les environnements sont modélisés en 3D tandis que les personnages et les éléments d’interaction sont en 2D. Le jeu se déroule dans un univers inspiré par la cuisine asiatique dans lequel les personnages peuvent interagir avec l’environnement." />
+    <title>LaCorbeille STUDIO | Rice Battle</title>
     <!--Favicon-->
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
@@ -20,45 +19,58 @@
     <link rel="stylesheet" href="../css/responsive/footer.css">
     <!-- JS -->
     <script src="../js/dynamicTitle.js" defer></script>
-    <script src="../js/slideshow.js" defer></script>
-    <script src="../js/gamecards.js" defer></script>
     <script src="../js/rightClick.js" defer></script>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Glitch&display=swap" rel="stylesheet">
     <!-- Schema.org -->
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
-        "@type": "Organization",
-        "name": "LaCorbeille STUDIO",
-        "url": "https://lacorbeille.studio",
-        "logo": "https://lacorbeille.studio/assets/img/branding/LogoFull.svg",
-        "description": "Créateur de jeux vidéo."
+        "@type": "VideoGame",
+        "name": "Rice Battle",
+        "url": "https://lacorbeille.studio/games/Rice%20Battle.html",
+        "image": "https://lacorbeille.studio/assets/img/games/RiceBattle/RiceBattle - SmallBanner.jpg",
+        "description": "RiceBattle est un jeu de combat en 2.5D pour deux joueurs, où les environnements sont modélisés en 3D tandis que les personnages et les éléments d’interaction sont en 2D. Le jeu se déroule dans un univers inspiré par la cuisine asiatique dans lequel les personnages peuvent interagir avec l’environnement.",
+        "author": {
+            "@type": "Organization",
+            "name": "LaCorbeille STUDIO",
+            "url": "https://lacorbeille.studio"
+        },
+        "publisher": {
+            "@type": "Organization",
+            "name": "LaCorbeille STUDIO",
+            "url": "https://lacorbeille.studio"
+        },
+        "genre": "Fighting",
+        "operatingSystem": "Windows",
+        "applicationCategory": "Game",
+        "inLanguage": "fr",
+        "datePublished": "2026-00-00"
     }
     </script>
     <!-- OpenGraph -->
-    <meta property="og:title" content="LaCorbeille STUDIO - Créateur de Jeux Vidéo" />
-    <meta property="og:description" content="Découvrez nos jeux vidéo et les dernières actualités de notre studio." />
-    <meta property="og:image" content="https://lacorbeille.studio/assets/img/branding/LogoFull.svg" />
-    <meta property="og:url" content="https://lacorbeille.studio" />
-    <meta property="og:type" content="website" />
+    <meta property="og:title" content="LaCorbeille STUDIO - Rice Battle" />
+    <meta property="og:description" content="RiceBattle est un jeu de combat en 2.5D pour deux joueurs, où les environnements sont modélisés en 3D tandis que les personnages et les éléments d’interaction sont en 2D. Le jeu se déroule dans un univers inspiré par la cuisine asiatique dans lequel les personnages peuvent interagir avec l’environnement." />
+    <meta property="og:image" content="https://lacorbeille.studio/assets/img/games/RiceBattle/RiceBattle - SmallBanner.jpg" />
+    <meta property="og:url" content="https://lacorbeille.studio/games/Rice%20Battle.html" />
+    <meta property="og:type" content="video.game" />
+    <meta property="og:locale" content="fr_FR" />
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="LaCorbeille STUDIO - Créateur de Jeux Vidéo" />
-    <meta name="twitter:description" content="Découvrez nos jeux vidéo et les dernières actualités de notre studio." />
-    <meta name="twitter:image" content="https://lacorbeille.studio/assets/img/branding/LogoFull.svg" />
+    <meta name="twitter:title" content="LaCorbeille STUDIO - Rice Battle" />
+    <meta name="twitter:description" content="RiceBattle est un jeu de combat en 2.5D pour deux joueurs, où les environnements sont modélisés en 3D tandis que les personnages et les éléments d’interaction sont en 2D. Le jeu se déroule dans un univers inspiré par la cuisine asiatique dans lequel les personnages peuvent interagir avec l’environnement." />
+    <meta name="twitter:image" content="https://lacorbeille.studio/assets/img/games/RiceBattle/RiceBattle - SmallBanner.jpg" />
     <meta name="twitter:site" content="@LaCorbeilleSTD" />
 </head>
 
 <body>
     <header>
-        <h1 style="display:none">LaCorbeille STUDIO</h1>
-        <a href="../index.html"><img src="../assets/img/branding/LogoFullWhite.svg" alt="LaCorbeille STUDIO - LogoFull" id="logoFull"></a>
-        <a href="../index.html"><img src="../assets/img/branding/LogoSmallWhite.svg" alt="LaCorbeille STUDIO - LogoSmall" id="logoSmall"></a>
+        <h1 style="display:none"> Rice Battle</h1>
+        <a href="../index.html" id="logoFull"><img src="../assets/img/branding/LogoFullWhite.svg" alt="LaCorbeille STUDIO - LogoFull"></a>
+        <a href="../index.html" id="logoSmall"><img src="../assets/img/branding/LogoSmallWhite.svg" alt="LaCorbeille STUDIO - LogoSmall"></a>
         <nav>
             <ul>
                 <li><a href="../index.html#games-section">Jeux</a></li>
@@ -79,23 +91,17 @@
             </div>
         </div>
         <div id="links">
-            <a href="../sitemap.xml" target="_blank">Sitemap</a>
+            <a href="../sitemap.xml">Sitemap</a>
             <a href="../legal.html">Legal notice</a>
-            <a href="https://drive.google.com/file/d/19BLUa7sSfQHJMSVENMNamBFYqbqVPh_s/view?usp=sharing"
-                target="_blank">Press kit</a>
+            <a href="https://drive.google.com/file/d/19BLUa7sSfQHJMSVENMNamBFYqbqVPh_s/view?usp=sharing" target="_blank">Press kit</a>
         </div>
         <div id="socials">
-            <a href="https://lacorbeille-studio.itch.io" target="_blank"><img src="../assets/img/social/ItchIO.svg"
-                    alt="Itch.io"></a>
-            <a href="https://discord.com/invite/hmPzS4k" target="_blank"><img src="../assets/img/social/Discord.svg"
-                    alt="Discord"></a>
-            <a href="https://www.facebook.com/people/LaCorbeille-Studio/61565357266191/" target="_blank"><img
-                    src="../assets/img/social/Facebook.svg" alt="Facebook"></a>
-            <a href="https://www.linkedin.com/company/lacorbeille-studio" target="_blank"><img
-                    src="../assets/img/social/LinkedIn.svg" alt="LinkedIn"></a>
+            <a href="https://lacorbeille-studio.itch.io" target="_blank"><img src="../assets/img/social/ItchIO.svg" alt="Itch.io"></a>
+            <a href="https://discord.com/invite/hmPzS4k" target="_blank"><img src="../assets/img/social/Discord.svg" alt="Discord"></a>
+            <a href="https://www.facebook.com/people/LaCorbeille-Studio/61565357266191/" target="_blank"><img src="../assets/img/social/Facebook.svg" alt="Facebook"></a>
+            <a href="https://www.linkedin.com/company/lacorbeille-studio" target="_blank"><img src="../assets/img/social/LinkedIn.svg" alt="LinkedIn"></a>
             <a href="https://x.com/LaCorbeilleSTD" target="_blank"><img src="../assets/img/social/X.svg" alt="X"></a>
-            <a href="https://www.instagram.com/lacorbeille.studio" target="_blank"><img
-                    src="../assets/img/social/Instagram.svg" alt="Instagram"></a>
+            <a href="https://www.instagram.com/lacorbeille.studio" target="_blank"><img src="../assets/img/social/Instagram.svg" alt="Instagram"></a>
         </div>
     </footer>
 </body>
