:mag: Update meta tags to improve SEO

--- a/index.html
+++ b/index.html
@@ -38,22 +38,36 @@
         "@type": "Organization",
         "name": "LaCorbeille STUDIO",
         "url": "https://lacorbeille.studio",
-        "logo": "https://lacorbeille.studio/assets/img/branding/LogoFull.svg",
-        "description": "Créateur de jeux vidéo."
+        "logo": "https://lacorbeille.studio/assets/img/branding/Logo Full Background.png",
+        "description": "Créateur de jeux vidéo.",
+        "sameAs": [
+            "https://lacorbeille-studio.itch.io",
+            "https://discord.com/invite/hmPzS4k",
+            "https://www.facebook.com/people/LaCorbeille-Studio/61565357266191/",
+            "https://www.linkedin.com/company/lacorbeille-studio",
+            "https://x.com/LaCorbeilleSTD",
+            "https://www.instagram.com/lacorbeille.studio"
+        ]
     }
     </script>
     <!-- OpenGraph -->
     <meta property="og:title" content="LaCorbeille STUDIO - Créateur de Jeux Vidéo" />
     <meta property="og:description" content="Découvrez nos jeux vidéo et les dernières actualités de notre studio." />
-    <meta property="og:image" content="https://lacorbeille.studio/assets/img/branding/LogoFull.svg" />
+    <meta property="og:image" content="https://lacorbeille.studio/assets/img/branding/Logo Full Background.png" />
     <meta property="og:url" content="https://lacorbeille.studio" />
     <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="LaCorbeille STUDIO" />
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="LaCorbeille STUDIO - Créateur de Jeux Vidéo" />
     <meta name="twitter:description" content="Découvrez nos jeux vidéo et les dernières actualités de notre studio." />
-    <meta name="twitter:image" content="https://lacorbeille.studio/assets/img/branding/LogoFull.svg" />
+    <meta name="twitter:image" content="https://lacorbeille.studio/assets/img/branding/Logo Full Background.png" />
     <meta name="twitter:site" content="@LaCorbeilleSTD" />
+    <meta name="twitter:creator" content="@LaCorbeilleSTD" />
+    <!-- Microdata -->
+    <meta itemprop="name" content="LaCorbeille STUDIO - Créateur de Jeux Vidéo" />
+    <meta itemprop="description" content="Découvrez nos jeux vidéo et les dernières actualités de notre studio." />
+    <meta itemprop="image" content="https://lacorbeille.studio/assets/img/branding/Logo Full Background.png" />
 </head>
 
 <body>
